--- a/css/style.css
+++ b/css/style.css
@@ -688,6 +688,13 @@ input[type='number'] {
   .container__bg {
     height: 380px;
   }
+  .container__bg-inner {
+    margin-bottom: -300px;
+  }
+  .info {
+    padding: 25px 24px;
+    margin: 0 18px 60px 18px;
+  }
   .menu-show {
     opacity: .9;
     display: block;
@@ -793,8 +800,50 @@ input[type='number'] {
   .header__contact-text {
     color: #b8ceee;
   }
+  .content {
+    margin: 115px 18px 50px 18px;
+  }
+  .breadcrumbs {
+    height: 20px;
+  }
+  .breadcrumbs * {
+    display: none;
+  }
 }
 @media (max-width: 760px) {
+  .info {
+    padding: 0 20px 20px 20px !important;
+  }
+  .info__title {
+    font-size: 24px !important;
+  }
+  .info p {
+    font-size: 14px;
+    line-height: 19px;
+    margin: 0 0 20px 0;
+  }
+  .info .button {
+    width: auto;
+    display: block;
+    font-size: 16px;
+    white-space: nowrap;
+    padding: 0;
+  }
+  .container__bg-inner {
+    margin-bottom: -265px;
+  }
+  .content {
+    padding: 0 18px;
+  }
+  .content h1,
+  .content__title {
+    font-weight: normal;
+    font-size: 20px !important;
+    line-height: 24px !important;
+  }
+  .content p {
+    font-size: 14px;
+  }
   .popup {
     width: auto;
   }
@@ -896,6 +945,15 @@ input[type='number'] {
   }
   .services__item {
     padding: 18px 10px !important;
+  }
+  .container__bg {
+    margin-top: 70px;
+  }
+  .container__bg-inner {
+    margin-bottom: -55px;
+  }
+  .content {
+    margin-top: 0;
   }
 }
 @media (max-width: 340px) {
